[package]
name = "ogp-checker"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
crossterm = "0.28.1"
image = "0.25.5"
ratatui = "0.29.0"
reqwest = { version = "0.12.9", features = ["blocking"] }
scraper = "0.21.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
